fix: Do not filter /